<resources>
    <string name="app_name">DBforTest</string>
    <string name="取消">取消</string>
    <string name="男性">男性</string>
    <string name="女性">女性</string>

    <string name="facebook_app_id">2332863756781877</string>
    <string name="fb_login_protocol_scheme">fb2332863756781877</string>
    <string name="title_activity_team_view">teamView</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
